# polito

./: testo
esercitazione1/: CMakeLists.txt  main.cpp  temperatura.cpp
esercitazione3/: CMakeLists.txt  main_test.cpp  razionali.hpp
esercitazione4/: CMakeLists.txt  misura_sorts.cpp  sorts.h
esercitazione5/: CMakeLists.txt  misura_sorts.cpp  osservazioni.txt  sorts.h  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  main.cpp  unidirected_edge.cpp  unidirected_edge.hpp  unidirected_graph.cpp  unidirected_graph.hpp
esercitazione_2/: CMakeLists.txt  es1  es_1.cpp  es_2.cpp
